updating the default style to handle sidebar text overflowing better; fixes #638

--- a/docs/template/css/style.css
+++ b/docs/template/css/style.css
@@ -57,6 +57,13 @@ body {
     padding-right: 20px;
     padding-left: 20px;
 }
+.sideoverflow {
+    display: block;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width:100%;
+}
 .nav-sidebar > .active > a,
 .nav-sidebar > .active > a:hover,
 .nav-sidebar > .active > a:focus {
